# flask-react-authentication-starter

./: .gitignore  Procfile  README.md  api.py  database.sql  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
api/: activate.sh  api.py  database.sql  requirements.txt
api/api_utils/: __init__.py  app.py  db.py  query.py  response.py
project-name-frontend/: package-lock.json  package.json
project-name-frontend/src/: App.jsx  main.jsx
project-name-frontend/src/components/: Layout.jsx
project-name-frontend/src/pages/: HomePage.jsx  LoginPage.jsx  NotFoundPage.jsx
project-name-frontend/src/state/: actions.jsx  store.js
project_name/: _0app.py  __init__.py  _app.py  _pool.py  _utils.py  query.py
src/: main.css  main.jsx
src/components/: App.jsx  Header.jsx  Layout.jsx
src/pages/: LoginPage.jsx  NotFoundPage.jsx
src/state/: actions.js  store.js
